plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'net.echo'
version = '2.2'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'commons-io:commons-io:2.18.0'
}

java {
    toolchain {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }
}

shadowJar {
    archiveBaseName.set('Brain4J')
    archiveClassifier.set('')
    archiveVersion.set(version)
}